--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "automatic-approve-action",
   "private": true,
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "start": "node ./index.js",
     "test": "jest",
