Add dangerous_files to action.yml
This ensures that the param can be used. 

Resolves #2

--- a/action.yml
+++ b/action.yml
@@ -13,3 +13,7 @@ inputs:
   workflows:
     description: The workflows to automatically approve
     required: true
+  dangerous_files:
+    description: Filenames that prevent the PR being automatically approved
+    required: false
+
