--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x]
-
+        node-version: [20.x, 22.x]
     env:
       CI: true
     steps:
